# markview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  build_win.ps1  install.sh  installer_win.iss  markview.desktop  markview.py  markview.spec  markview_core.py  markview_win.py  meson.build  requirements-win.txt  style.css  uninstall.sh  version_info.txt  vertexmarkdown.py  vertexmarkdown_win.py  vertexwrite.desktop  vertexwrite.py  vertexwrite_win.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-windows.yml
data/: com.canarybuilds.VertexWrite.desktop  com.canarybuilds.VertexWrite.metainfo.xml  vertexwrite.in
debian/: changelog  control  files  vertexwrite.desktop  vertexwrite.metainfo.xml
docs/wiki/: Architecture.md  Configuration.md  Development.md  FAQ.md  Home.md  Installation.md  Keyboard-Shortcuts.md
flatpak/: README.md  com.canarybuilds.VertexWrite.metainfo.xml  com.canarybuilds.VertexWrite.yml  python3-requirements.json  requirements.txt
scripts/: smoke_test_win_bundle.py  sync-wiki.sh
snap/: snapcraft.yaml
snap/local/: vertexwrite.desktop
tests/: test_core.py
